Cleanup some TODOs;